--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/markdownit": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@vue-hero-icons/outline": "^1.7.2",
+    "@vue-hero-icons/solid": "^1.7.2",
     "core-js": "^3.21.1",
     "nuxt": "^2.15.7"
   },
