--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@nuxt/postcss8": "^1.1.3",
+    "autoprefixer": "^10.4.7",
     "nuxt-vite": "^0.3.5",
-    "postcss": "^8.4.8",
-    "sass": "^1.49.9"
+    "postcss": "^8.4.13",
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.24"
   }
 }
